--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -7,7 +7,7 @@ ENDIF()
 SET( QT_USE_QTSQL TRUE )
 SET( QT_USE_QTNETWORK TRUE )
 SET( QT_USE_QTXML TRUE )
-SET( QT_USE_PHONON TRUE )
+SET( QT_USE_PHONON FALSE )
 SET( QT_USE_QTWEBKIT TRUE )
 
 INCLUDE( ${QT_USE_FILE} )
